--- a/proyectos/templates/proyectos/pago_form.html
+++ b/proyectos/templates/proyectos/pago_form.html
@@ -1,7 +1,7 @@
 {% extends 'proyectos/base.html' %}
 
 {% block title %}
-    {% if pago %}Editar Pago{% else %}Registrar Pago{% endif %} - Sistema Constructora
+    {% if pago %}Editar Pago{% else %}Registrar Pago{% endif %} - MultiProject Pro
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
         </h2>
     </div>
     <div class="col-md-4 text-end">
-        <a href="{% if proyecto_seleccionado %}{% url 'proyecto_detail' proyecto_seleccionado.id %}{% else %}{% url 'proyectos_list' %}{% endif %}" class="btn btn-secondary">
+        <a href="{% if proyecto_seleccionado %}{% url 'proyecto_detail' proyecto_seleccionado.id %}{% else %}{% url 'proyectos_list' empresa_codigo %}{% endif %}" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Volver
         </a>
     </div>
@@ -114,7 +114,7 @@
                     {% endif %}
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{% if proyecto_seleccionado %}{% url 'proyecto_detail' proyecto_seleccionado.id %}{% else %}{% url 'proyectos_list' %}{% endif %}"
+                        <a href="{% if proyecto_seleccionado %}{% url 'proyecto_detail' proyecto_seleccionado.id %}{% else %}{% url 'proyectos_list' empresa_codigo %}{% endif %}"
                            class="btn btn-secondary">
                             <i class="bi bi-x"></i> Cancelar
                         </a>
