--- a/proyectos/templates/proyectos/planilla_form.html
+++ b/proyectos/templates/proyectos/planilla_form.html
@@ -84,7 +84,7 @@
         <p class="text-muted">Complete la información de la planilla y agregue los empleados</p>
     </div>
     <div class="col-md-4 text-end">
-        <a href="{% url 'planillas_list' %}" class="btn btn-secondary">
+        <a href="{% url 'planillas_list' empresa_codigo %}" class="btn btn-secondary">
             <i class="bi bi-arrow-left"></i> Volver
         </a>
     </div>
@@ -491,7 +491,7 @@
 
     <!-- BOTONES DE ACCIÓN -->
     <div class="d-flex justify-content-between mb-5">
-        <a href="{% url 'planillas_list' %}" class="btn btn-secondary btn-lg">
+        <a href="{% url 'planillas_list' empresa_codigo %}" class="btn btn-secondary btn-lg">
             <i class="bi bi-x-circle"></i> Cancelar
         </a>
         <button type="submit" class="btn btn-primary btn-lg">
