--- a/proyectos/templates/proyectos/proveedor_form.html
+++ b/proyectos/templates/proyectos/proveedor_form.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="d-flex justify-content-between mt-4">
-        <a href="{% url 'proveedores_list' %}" class="btn btn-secondary">
+        <a href="{% url 'proveedores_list' empresa_codigo %}" class="btn btn-secondary">
             <i class="bi bi-x-circle"></i> Cancelar
         </a>
         <button type="submit" class="btn btn-primary">
