Modulo de maquinaria

--- a/proyectos/templates/proyectos/proyecto_detail.html
+++ b/proyectos/templates/proyectos/proyecto_detail.html
@@ -331,6 +331,10 @@
                         <th>Total Gastos:</th>
                         <td class="text-end">${{ total_gastos|floatformat:2 }}</td>
                     </tr>
+                    <tr>
+                        <th>Total Maquinaria:</th>
+                        <td class="text-end">${{ total_maquinaria|floatformat:2 }}</td>
+                    </tr>
                     <tr class="table-active">
                         <th><strong>Costos Totales:</strong></th>
                         <td class="text-end"><strong>${{ costos_totales|floatformat:2 }}</strong></td>
